--- a/src/containers/Layout/Layout.scss
+++ b/src/containers/Layout/Layout.scss
@@ -5,7 +5,7 @@
   display: flex;
   min-height: 100vh;
   flex-direction: column;
-  margin: 10px 10px;
+  margin: 0;
 
   .content {
     display: flex;
