--- a/src/containers/Layout/Layout.scss
+++ b/src/containers/Layout/Layout.scss
@@ -1,5 +1,5 @@
 // eslint-disable
-@import '~bootstrap-sass/assets/stylesheets/bootstrap/mixins';
+@import '~theme/style';
 
 .app {
   display: flex;
