feat(search): search toolbar with priceinput

--- a/src/modules/Search/components/PropertyTable/styles/table.scss
+++ b/src/modules/Search/components/PropertyTable/styles/table.scss
@@ -1,6 +1,6 @@
 .tableHolder {
   background-color: #FFF;
-  min-height: 100%;
-  height: 100%;
-  overflow-y: scroll;
+  // min-height: 100%;
+  // height: 100%;
+  // overflow-y: scroll;
 }
