--- a/src/modules/Search/styles.scss
+++ b/src/modules/Search/styles.scss
@@ -1,9 +1,30 @@
-.container {
+:global {
+  .ui.container {
+    margin-left: 0!important;
+    margin-right: 0!important;
+  }
+
+  .ui.grid, .ui.grid>.column:not(.row) {
+    padding: 0!important;
+  }
+}
+
+.flexContainer {
   display: flex!important;
   flex-flow: column;
 }
 
-.mapContainer {
+.flexRow {
   display: flex;
   flex: 1;
+  overflow-y: hidden;
+}
+
+.tableColumn {
+  height: 100%;
+  overflow-y: auto;
+}
+
+.mapColumn {
+  height: 100%;
 }
